--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4-1201-jdbc41</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
